// Code generated by make; DO NOT EDIT.
syntax = "proto3";
package kahu.metaservice;

option go_package = "lib/go;metaservice";

message BackupRequest {
  message BackupIdentifier {
    string backup_handle = 1;
    string backup_loction =2;
    map <string, string> parameters = 9;
  }

  message Object {
    string unique_identification = 1;
    string json = 2;
  }

  oneof Data {
    BackupIdentifier backup = 1;
    Object object = 2;
  }
}

message RestoreRequest {
  string backup_handle = 1;
  string backup_loction =2;
  map <string, string> parameters = 9;
}

message GetResponse {
  string unique_identification = 1;
  string object = 2;
}

message Empty {}

service MetaService {
  rpc Backup(stream BackupRequest)
      returns (Empty) {}
  rpc Restore(RestoreRequest)
      returns (stream GetResponse) {}
}

